# slideio

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  _.gitlab-ci.yml  a.txt  build-dependencies.ps1  build-dependencies.sh  conan.ps1  conan.sh  conanbuildinfo_debug_x64_v142.props  conanbuildinfo_multi.props  conanfile.txt  create-profile.py  deploy_pythons_mac.sh  docker-build-linux.sh  docker-buld-linux.sh  install.ps1  install.py  run-tests-linux.sh  search.sh  tag.sh  test.py
slideio/pybind/: CMakeLists.txt  README.md  SceneW.cpp  SceneW.h  SlideW.cpp  SlideW.h  conanfile.txt  globalW.cpp  globalW.h  install.ps1  install.sh  pybind.cpp  pyglobals.cpp  pyglobals.hpp  pyscene.cpp  pyscene.hpp  pyslide.cpp  pyslide.hpp  requirements-dev.txt  setup.py
slideio/slideio/: CMakeLists.txt  conanfile.txt  scene.cpp  scene.hpp  slide.cpp  slide.hpp  slideio.hpp  structs.hpp
slideio/slideio/core/: CMakeLists.txt  cvglobals.hpp  cvscene.cpp  cvscene.hpp  cvslide.cpp  cvslide.hpp  imagedriver.cpp  imagedriver.hpp  imagedrivermanager.cpp  imagedrivermanager.hpp  scene.cpp  scene.hpp  slide.cpp  slide.hpp  slideio.cpp  structs.hpp
slideio/slideio/imagetools/: CMakeLists.txt  gdalcodec.cpp  imagetools.cpp  imagetools.hpp  jp2kcodec.cpp  jxrcodec.cpp  memory_stream.cpp  memory_stream.hpp  tifftools.cpp  tifftools.hpp  tilecomposer.cpp  tilecomposer.hpp  tools.cpp  tools.hpp
src/py-bind/: CMakeLists.txt  CMakePresets.json  build-one-wheel.ps1  build-py-linux.sh  build-wheels-linux.sh  build-wheels-macos.sh  build-wheels-win.ps1  build-wheels.ps1  build-wheels.sh  build_py_dists.py  build_py_dists_linux.sh  build_slideio_dists.py  build_slideio_dists_linux.sh  conan_toolchain.cmake  conanbuild.bat  conanbuildenv-release-x86_64.bat  conanfile.txt  conanrun.bat  conanrunenv-release-x86_64.bat  deactivate_conanbuild.bat  deactivate_conanrun.bat  install-mac.sh  install.ps1  install.sh  install_py_dists.py  lib.ps1  pyaux.hpp  pybind.cpp  pyconverter.cpp  pyconverter.hpp  pyglobals.cpp  pyglobals.hpp  pyscene.cpp  pyscene.hpp  pyslide.cpp  pyslide.hpp  pytransformation.cpp  pytransformation.hpp  repair_wheels.sh  setup.py
src/py-bind/slideio/: __init__.py  py_slideio.py
src/pybind/: CMakeLists.txt  build_py_dists.py  conanfile.txt  install-mac.sh  install.ps1  install.sh  pyaux.hpp  pybind.cpp  pyglobals.cpp  pyglobals.hpp  pyinfo.py  pyscene.cpp  pyscene.hpp  pyslide.cpp  pyslide.hpp  setup.py
src/pybind/slideio/: __init__.py  py_slideio.py
src/single_tests/jp2k/: CMakeLists.txt  color.cpp  compress.cpp  conanfile.txt  convert.c  convert.cpp  convertbmp.c  convertpng.cpp  converttif.c  jp2_memory.cpp  jp2_memory.hpp  opj_compress.cpp  opj_inttypes.h  opj_wrappers.h
src/single_tests/memory_leaks/: CMakeLists.txt  conanfile.txt  memory_leaks.cpp
src/single_tests/svs_memory/: CMakeLists.txt  conanfile.txt  svs_memory.cpp
src/slideio/: CMakeLists.txt  base.hpp  conanfile.txt  gdal_lib.hpp  logs.cpp  logs.hpp  scene.cpp  scene.hpp  slide.cpp  slide.hpp  slideio.cpp  slideio.hpp  slideio_def.hpp  slideio_enums.hpp  structs.hpp  xmltools.cpp  xmltools.hpp
src/slideio/base/: CMakeLists.txt  base.hpp  conanfile.txt  exceptions.cpp  exceptions.hpp  log.hpp  range.hpp  range.inl  rect.hpp  rect.inl  resolution.hpp  size.hpp  size.inl  slideio_base_def.hpp  slideio_enums.cpp  slideio_enums.hpp  slideio_structs.hpp
src/slideio/converter/: CMakeLists.txt  conanfile.py  conanfile.txt  converter.cpp  converter.hpp  converter_def.hpp  convertercallback.hpp  converterparameters.cpp  converterparameters.hpp  convertersvstools.cpp  convertersvstools.hpp  convertertifftools.cpp  convertertifftools.hpp  convertertools.cpp  convertertools.hpp  tiffconverter.cpp  tiffconverter.hpp  tiffstructure.cpp  tiffstructure.hpp
src/slideio/core/: CMakeLists.txt  base.hpp  conanfile.txt  cvglobals.cpp  cvscene.cpp  cvscene.hpp  cvslide.cpp  cvslide.hpp  cvsmallscene.cpp  cvsmallscene.hpp  cvstructs.hpp  cvtools.cpp  cvtools.hpp  dimensions.cpp  dimensions.hpp  imagedriver.cpp  imagedriver.hpp  imagedrivermanager.cpp  imagedrivermanager.hpp  levelinfo.cpp  levelinfo.hpp  refcounter.hpp  slideio_core_def.hpp  slideio_enums.hpp  structs.hpp
src/slideio/drivers/: CMakeLists.txt
src/slideio/ext/: CMakeLists.txt  exceptions.hpp  log.cpp  log.hpp  logs.cpp  logs.hpp
src/slideio/imagetools/: CMakeLists.txt  conanfile.py  conanfile.txt  cvtools.cpp  cvtools.hpp  encodeparameters.hpp  fiwrapper.cpp  fiwrapper.hpp  gdalcodec.cpp  imagetools.cpp  imagetools.hpp  imagetoolsinitializer.cpp  jp2kcodec.cpp  jp2kcodec.hpp  jp2kmem.cpp  jpegcodec.cpp  jpeglib_aux.cpp  jpeglib_aux.hpp  jxrcodec.cpp  libtiff.hpp  memory_stream.cpp  similaritytools.hpp  slideio_imagetools_def.hpp  smallimage.cpp  smallimage.hpp  smalltiffwrapper.cpp  smalltiffwrapper.hpp  tempfile.hpp  tifffiles.cpp  tifffiles.hpp  tiffkeeper.cpp  tiffkeeper.hpp  tiffmessagehandler.cpp  tiffmessagehandler.hpp  tifftools.cpp  tifftools.hpp  tilecomposer.cpp  tools.cpp  tools.hpp  wildmat.c
src/slideio/persistence/: CMakeLists.txt  conanfile.txt  hdf5storage.cpp  hdf5storage.hpp  persistence.cpp  persistence.hpp  slideio_persistence_def.hpp  storage.cpp  storage.hpp
src/slideio/processor/: CMakeLists.txt  a.cpp  conanfile.txt  contourmanager.hpp  imageobject.cpp  imageobject.hpp  imageobjectbordercontainer.hpp  imageobjectborderiterator.cpp  imageobjectborderiterator.hpp  imageobjectmanager.cpp  imageobjectmanager.hpp  imageobjectpixelcontainer.hpp  imageobjectpixeliterator.hpp  multiresolutionsegmentation.cpp  (+14 more)
src/tests/: CMakeLists.txt  conanfile.txt  test_afi_driver.cpp  test_cvtools.cpp  test_czi_driver.cpp  test_czi_tools.cpp  test_dcm_driver.cpp  test_dcmfile.cpp  test_exception.cpp  test_gdal_driver.cpp  test_imagedrivermanager.cpp  test_imagetools.cpp  test_scn_driver.cpp  test_svs_driver.cpp  test_svs_tools.cpp  test_testtools.cpp  test_tifftools.cpp  test_tilecomposer.cpp  test_tools.cpp  test_zvi_driver.cpp  test_zviutils.cpp  testtiler.cpp  testtiler.hpp  testtools.cpp  testtools.hpp
(+653 files in other folders)
